--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -569,38 +569,57 @@
             // Image processing
             function compressImage(file, maxSizeKB, quality = 0.9) {
                 return new Promise((resolve) => {
-                    const canvas = document.createElement("canvas");
-                    const ctx = canvas.getContext("2d");
                     const img = new Image();
 
                     img.onload = () => {
-                        canvas.width = img.width;
-                        canvas.height = img.height;
-                        ctx.drawImage(img, 0, 0);
+                        const tryCompressAtScale = (scale) => {
+                            const canvas = document.createElement("canvas");
+                            const ctx = canvas.getContext("2d");
 
-                        const tryCompress = (q) => {
-                            canvas.toBlob(
-                                (blob) => {
-                                    if (
-                                        blob.size / 1024 <= maxSizeKB ||
-                                        q <= 0.1
-                                    ) {
-                                        resolve({
-                                            blob,
-                                            quality: q,
-                                            originalSize: file.size,
-                                            newSize: blob.size,
-                                        });
-                                    } else {
-                                        tryCompress(q - 0.05);
-                                    }
-                                },
-                                "image/jpeg",
-                                q,
+                            canvas.width = Math.round(img.width * scale);
+                            canvas.height = Math.round(img.height * scale);
+                            ctx.drawImage(
+                                img,
+                                0,
+                                0,
+                                canvas.width,
+                                canvas.height,
                             );
+
+                            const tryCompress = (q) => {
+                                canvas.toBlob(
+                                    (blob) => {
+                                        if (blob.size / 1024 <= maxSizeKB) {
+                                            resolve({
+                                                blob,
+                                                quality: q,
+                                                scale: scale,
+                                                originalSize: file.size,
+                                                newSize: blob.size,
+                                            });
+                                        } else if (q > 0.3) {
+                                            tryCompress(q - 0.1);
+                                        } else if (scale > 0.1) {
+                                            tryCompressAtScale(scale * 0.7);
+                                        } else {
+                                            resolve({
+                                                blob,
+                                                quality: q,
+                                                scale: scale,
+                                                originalSize: file.size,
+                                                newSize: blob.size,
+                                            });
+                                        }
+                                    },
+                                    "image/jpeg",
+                                    q,
+                                );
+                            };
+
+                            tryCompress(0.9);
                         };
 
-                        tryCompress(quality);
+                        tryCompressAtScale(1);
                     };
 
                     img.src = URL.createObjectURL(file);
